# PSConnMon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  PSConnMon_Roadmap.md  README.md  SECURITY.md  Watch-Network.ps1  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  DESIGN_DECISIONS.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
.github/instructions/: powershell.instructions.md
.tmp-phase2/: adrs.md  big-commit.md  kerberos.md  late-timeline.md  roadmap.md  spec.md  tooling.md  tracert-fix.md
PSConnMon/: PSConnMon.psd1  PSConnMon.psm1
docs/adr/: ADR-0001-agent-service-architecture.md  ADR-0002-telemetry-and-import-topology.md  ADR-0003-extension-trust-boundary.md
docs/runbooks/: demo.md  distributed-deployment.md  healthcheck.md  troubleshooting.md
docs/spec/: architecture.md  requirements.md
docs/talks/: phase2-journey-notes.md
samples/config/: azure-branch.psconnmon.json  azure-branch.psconnmon.yaml  local-lab.psconnmon.json  local-lab.psconnmon.yaml
samples/ingest/: sample-batch.json
schemas/: psconnmon-config.schema.json  psconnmon-event.schema.json
src/psconnmon_service/: __init__.py  __main__.py  app.py  config.py  importer.py  models.py  storage.py  ui.py
tests/PowerShell/: PSConnMon.Tests.ps1
tests/python/: conftest.py  test_app.py  test_importer.py  test_models.py  test_storage.py  test_ui.py
(+15 files in other folders)
