[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psconnmon-service"
version = "0.3.0"
description = "Reporting service and support tooling for PSConnMon."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Frank Lesniak" }
]
keywords = ["psconnmon", "powershell", "monitoring", "fastapi", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "azure-identity>=1.19.0,<2.0.0",
    "azure-storage-blob>=12.24.0,<13.0.0",
    "duckdb>=1.1.3,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
